Correctly handle baseline alignment on layout component

--- a/src/shared/components/layout/_index.scss
+++ b/src/shared/components/layout/_index.scss
@@ -4,7 +4,7 @@
 $forkitall-layout-display: (flex, grid);
 $forkitall-layout-gap: ("0", "25", "50", "75", "100", "125", "150", "200", "250", "300", "400", "500", "600");
 $forkitall-layout-flex-direction: (row, row-reverse, column, column-reverse);
-$forkitall-layout-align-items: (center, space-between, end, start);
+$forkitall-layout-align-items: (center, space-between, end, start, baseline);
 $forkitall-layout-justify-content: (center, space-between, end, start);
 $forkitall-layout-flex-wrap: (wrap, nowrap);
 $forkitall-layout-flex-grow: (0, 1);
